--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 _site
 .sass-cache
 .jekyll-metadata
+/.idea/.gitignore
+/.idea/gme-jekyll-cv.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
