--- a/_data/data.yml
+++ b/_data/data.yml
@@ -1,20 +1,19 @@
-name: John Doe
+name: Gabriel Eguía
 support_dark_mode: true
 fork: true
 
 # Sidebar
 contact:
-  email: info@johndoe.com
-  github: johndoe
-  linkedin: johndoe
+  #email: gabrieleguia@gmail.com
+  github: gabrieleguia
+  linkedin: gabrieleguia
   phone: 
-  gitlab: 
-  twitter: 
+  gitlab: gabrieleguia
+  twitter: gabrieleguia
 
 languages:
+  - idiom: Spanish
   - idiom: English
-  - idiom: Russian
-  - idiom: French
 
 education:
   - degree: MSc in Informatics
@@ -28,11 +27,13 @@ education:
 skills:
   - category: Backend
     skill: 
-      - Go
-      - Rust
+      - Java
+      - Kotlin
+      - Spring
+      - Micronaut
   - category: Frontend
     skill:
-      - React
+      - Angular
       - Typescript
   - category: DevOps
     skill:
@@ -41,11 +42,10 @@ skills:
 
 # Profile
 profile: |
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-  fugiat nulla pariatur.
+  Full Stack Developer. Application Analyst, Designer and Developer in many programming languages.
+  Best practices, Clean Code, DevOps and Software craftsmanship enthusiastic.
+  My goals are to grow in my career, learning new technologies and becoming a technical leader and referent, leading and influencing teams, and helping teammates to grow.
+  Specialties: Java, Web Applications, REST APIs, integration, Object Oriented Design, Design Patterns, Software Architecture, Agile methodologies, TDD.
 
 # Experience
 experience:
