gitignore and some personal data

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -42,10 +42,8 @@ skills:
 
 # Profile
 profile: |
-  Full Stack Developer. Application Analyst, Designer and Developer in many programming languages.
-  Best practices, Clean Code, DevOps and Software craftsmanship enthusiastic.
+  Full Stack Developer. Application Analyst, Designer and Developer in many programming languages. Best practices, Clean Code, DevOps and Software craftsmanship enthusiastic.
   My goals are to grow in my career, learning new technologies and becoming a technical leader and referent, leading and influencing teams, and helping teammates to grow.
-  \n
   Specialties: Java, Web Applications, REST APIs, integration, Object Oriented Design, Design Patterns, Software Architecture, Agile methodologies, TDD.
 
 # Experience
