--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: CV | A jekyll template
 description:  A beautiful template for your CV.
-url: https://jekyll-cv.stavrospanakakis.com
-baseurl: ''
+url: https://gabrieleguia.github.io
+baseurl: '/gme-jekyll-cv'
 theme_skin: blue
 
 sass:
