--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CV | A jekyll template
-description:  A beautiful template for your CV.
+title: CV | Gabriel Eguia
+description:  Gabriel Eguia's CV.
 url: https://gabrieleguia.github.io
 baseurl: '/gme-jekyll-cv'
 theme_skin: blue
