first experience data load

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -68,7 +68,7 @@ experience:
     time: 2017-2019
     company: Kwan Mobile
     details: |
-      As freelance developer.\n
+      As freelance developer.  
       Senior fullstack software developer, system analyst and designer. Worked with Java + Spring + Hibernate and JSP + jQuery.
       Involved in the analysis, design, definition and development of the IT architecture for the backend of the traffic tickets report system of GCBA (Gobierno de la Ciudad de Buenos Aires).
     technologies_used: |
