--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,12 +18,12 @@ languages:
 
 education:
   - degree: Information Systems Engineer
-    time: 2014-Unfinished (6 out of 10 semesters)
+    time: 2014-(6 out of 10 semesters)
     university: Universidad Tecnológica Nacional
 
   - degree: Electronics Technician
     time: 1995-2000
-    university: Escuela Técnica Nº28 DE Nº10 "República Francesa"
+    university: Escuela Técnica República Francesa
 
 skills:
   - category: Backend
