--- a/_data/data.yml
+++ b/_data/data.yml
@@ -23,7 +23,7 @@ education:
 
   - degree: Electronics Technician
     time: 1995-2000
-    university: Escuela Técnica República Francesa
+    university: Esc. Técnica República Francesa
 
 skills:
   - category: Backend
